tests/snapshots/integration__integration_tests__switch__switch_execute_failure.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - fail-test
    - "--execute"
    - exit 1
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfail-test[0m[0m
  [2mPath: [REPO]/../test-repo.fail-test[0m


----- stderr -----
Command 'exit 1' failed with exit code 1
