tests/snapshots/integration__integration_tests__switch__switch_existing_with_shell_configured.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - shell-configured
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mSwitched to worktree for [1m[32mshell-configured[0m[32m at [1m[32m[WORKTREE_SHELL_CONFIGURED][0m[0m

----- stderr -----
